2008-01-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimagemap.c: quite some cleanup (use GeglRectangle
	more globally and don't leave stuff around if we abort for
	whatever reason).

2008-01-03  Michael Natterer  <mitch@gimp.org>

	* app/gegl/Makefile.am
	* app/gegl/gegl-types.h
	* app/gegl/gimpoperationthreshold.[ch]: gimpish threshold operator
	which has "low" and "high" properties.

	* app/gegl/gimp-gegl.c: register it.

	* app/gegl/gimpoperationdesaturate.[ch]: fix copyright.

	* app/tools/gimpthresholdtool.[ch]: use the new operator.

2008-01-03  Michael Natterer  <mitch@gimp.org>

	Some more gegl code to have some playground for experimenting.

	* app/gegl/Makefile.am
	* app/gegl/gegl-types.h
	* app/gegl/gimpoperationdesaturate.[ch]: ported desaturate.

	* app/gegl/gimp-gegl.c: register it.

	* app/gegl/gimpoperationtilesink.h: fix name of parent class member.

	* app/core/gimpdrawable-desaturate.c: use the new operator, but
	keep the old code around (prepared for runtime switching).

	* app/core/gimpdrawable-invert.c: prepare for runtime switching
	here too.

2008-01-03  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gegl/gegl-operation-sink.h
	* app/gegl/gegl/gegl-operation-source.h: updated copies from gegl.

	* app/gegl/gegl/gegl-operation-filter.h
	* app/gegl/gegl/gegl-operation-point-filter.h: new files from gegl.

2008-01-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/randomize.c: added previews for hurl,
	pick, and slur.
	
2008-01-02  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/gimpdrawable-operation.[ch]: new files containing
	gimp_drawable_apply_operation() which applies a gegl operation
	to a drawable's selected pixels using shadow tiles. Will soon
	be used in more places than just invert.

	* app/core/gimpdrawable-invert.c: use it here, makes
	gimp_drawable_invert() a 3-liner.

2008-01-01  Martin Nordholts  <martinn@svn.gnome.org>
