@@ -1,5 +1,13 @@
 2008-01-03  Michael Natterer  <mitch@gimp.org>
 
+	* app/tools/gimpimagemaptool.[ch]: keep the central processing
+	node around here...
+
+	* app/tools/gimpbrightnesscontrasttool.[ch]
+	* app/tools/gimpthresholdtool.[ch]: ...instead of here.
+
+2008-01-03  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimpimagemap.c: quite some cleanup (use GeglRectangle
 	more globally and don't leave stuff around if we abort for
 	whatever reason).
